Added Auto-Zero (auto0) code to routes/index.js for authentication, not to be confused with authorization
